<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginFragment">

    <EditText
        android:id="@+id/login_edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edittext_username"/>

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edittext_password"/>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_login"/>

    <TextView
        android:id="@+id/login_textview_errorlabel"
        android:text="@string/login_textview_errorlabel"
        style="@style/MyTheme.TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_textview_noconnectionlabel"
        style="@style/MyTheme.TextViewTitle"
        android:text="@string/login_textview_noconnectionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />



</LinearLayout>
